# Treasure_huntV2

Treasure_Hunt/: Boat_game.cpp  Boat_game.h  CMakeLists.txt  IA_game.cpp  IA_game.h  README.md  server.cpp  treasure_hunt.yaml  treasure_hunt_gui.py
Treasure_Hunt/build-Treasure_Hunt-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  treasure_hunt_server  treasure_hunt_server.cbp
Treasure_Hunt/client_template/: CMakeLists.txt  treasure_hunt.cpp
Treasure_Hunt/include/duels/treasure_hunt/: game.h  msg.h
